<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CPUSpy</string>
    <string name="app_name_long">CPUSpy Material</string>
    <string name="build_version">v%s</string>

    <string name="core_offline">Offline</string>

    <string name="unused_states_count">%s&#160;Unused States</string>

    <string name="total_state_time">Total State Time</string>

    <string name="charged_view_enabled">Auto Reset Enabled</string>
    <string name="charged_view_status">Battery Status: Charged</string>
    <string name="charged_view_message">Once the device is fully charged, unplug your charger to automatically reset the CPU timers.</string>

    <string name="menu_changelog">Changelog</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_help_translate">Help Translate</string>

    <string name="states_empty">Empty</string>
    <string name="states_deep_sleep">Deep Sleep</string>
    <string name="states_warning"><b>Uh Oh!</b>\n\nStatic file not found. Are you sure your phone is compatible?\n\nIf you are running a custom ROM or kernel, try contacting its developer to inform him that the states file is not readable.</string>
    <string name="states_toolbar_hide" translatable="false">Hide States</string>
    <string name="states_toolbar_reset" translatable="false">Reset</string>
    <string name="states_toolbar_restore" translatable="false">Restore</string>

    <string name="error">ERROR</string>

    <string name="snackbar_text_reset">Timers reset successfully</string>
    <string name="snackbar_text_restore">Timers restored successfully</string>
    <string name="snackbar_text_crashreport">Crash reporting disabled. Changes will take effect when app restarts.</string>
    <string name="snackbar_text_update">A newer version is available!</string>
    <string name="snackbar_text_undo">Undo</string>
    <string name="snackbar_text_delete">Delete</string>

    <string name="action_changelog">Full Changelog</string>
    <string name="action_back">Back</string>
    <string name="action_done">Done</string>
    <string name="action_disable">Disable</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_view">View</string>

    <string name="widget_reset_title">CPUSpy - Reset Timers</string>
    <string name="widget_reset_error">Oops! There was an error, try again</string>
    <string name="widget_reset_success">Timers reset successfully</string>

    <!-- Information -->
    <string name="information">Information</string>
    <string name="information_kernel_info">Kernel Info</string>
    <string name="information_device_info">Device Info</string>
    <string name="information_cpu_info">CPU Info</string>
    <string name="information_kernel_governor">Governor:</string>
    <string name="information_kernel_version_header">Version:</string>
    <string name="information_kernel_version_full_header">Full Kernel Version</string>
    <string name="information_kernel_version_unavailable">Kernel version unavailable</string>
    <string name="information_device_build_header">Build ID:</string>
    <string name="information_device_api_header">API Level:</string>
    <string name="information_device_manuf_header">Manufacturer:</string>
    <string name="information_device_model_header">Model:</string>
    <string name="information_device_board_header">Board:</string>
    <string name="information_device_platform_header">Platform:</string>
    <string name="information_device_runtime_header">Runtime:</string>
    <string name="information_device_runtime_art">ART</string>
    <string name="information_device_runtime_dalvik">Dalvik</string>
    <string name="information_device_bootloader_header">Bootloader:</string>
    <string name="information_cpu_abi_header">ABI:</string>
    <string name="information_cpu_arch_header">Architecture:</string>
    <string name="information_cpu_freq_header">Frequency:</string>
    <string name="information_cpu_temp_header">Temp:</string>
    <string name="information_cpu_features_header">Features:</string>
    <string name="information_cpu_usage_header">Usage:</string>

    <string name="information_usage_header">CPU Usage</string>
    <string name="information_core_header">Cores:</string>
    <string name="information_cpu0_header">CPU 0:</string>
    <string name="information_cpu1_header">CPU 1:</string>
    <string name="information_cpu2_header">CPU 2:</string>
    <string name="information_cpu3_header">CPU 3:</string>
    <string name="information_cpu4_header">CPU 4:</string>
    <string name="information_cpu5_header">CPU 5:</string>
    <string name="information_cpu6_header">CPU 6:</string>
    <string name="information_cpu7_header">CPU 7:</string>

    <!-- Welcome info -->
    <string name="welcome_summary">Welcome to CPUSpy Material. Use this tool to monitor which frequencies your CPU uses the most.</string>
    <string name="welcome_features">Features</string>
    <string name="welcome_cpuinfo">&#8226; CPU + Kernel information and monitoring</string>
    <string name="welcome_crashreport">&#8226; Automatically sends crash and usage reports</string>
    <string name="welcome_autorefresh">&#8226; Enable Auto Refresh to update states in real time</string>
    <string name="welcome_autoreset">&#8226; Timers automatically reset once battery is full</string>
    <string name="welcome_widget">&#8226; Widget to reset CPU timers from home screen</string>
    <string name="welcome_hidepercent">&#8226; Option to hide state below certain percentage</string>

    <!-- Settings info -->
    <string name="settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_ui">UI</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_autorefresh">Automatic Refresh</string>
    <string name="pref_summary_autorefresh">Refresh the CPU timers automatically</string>
    <string name="pref_title_autoreset">Automatic Reset</string>
    <string name="pref_summary_autoreset">Reset CPU timers when fully charged</string>
    <string name="pref_title_sleepdetection">Deep Sleep Detection</string>
    <string name="pref_summary_sleepdetection">Notify if device doesn\'t enter deep sleep</string>
    <string name="pref_title_hidestates">Hide States Below Percentage</string>
    <string name="pref_summary_hidestates">States below % will not be used</string>
    <string name="pref_title_themes">Base Theme</string>
    <string name="pref_title_navbar">Colored Navigation Bar</string>
    <string name="pref_summary_navbar">Enable primary colored navigation bar</string>
    <string name="pref_title_checkupdates">Check For Updates</string>
    <string name="pref_summary_checkupdates">Last checked:&#160;</string>
    <string name="pref_title_crashreport">Anonymous Crash Reporting</string>
    <string name="pref_summary_crashreport">Allow collection of Crash and Usage data</string>
    <string name="pref_title_license">Open Source Licenses</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>

    <!-- Open Source Licenses -->
    <string name="license_header">Libraries</string>
    <string name="translators_header">Translators</string>

    <!-- About -->
    <string name="pref_about_header_dev">Developer</string>
    <string name="pref_about_header_credits">Credits</string>
    <string name="pref_about_developer">Rob Beane (existz)</string>

    <!-- Tab Title -->
    <string name="tab_title_timers">Timers</string>
    <string name="tab_title_info">Info</string>

    <string name="notification_warning">Warning</string>
    <string name="notification_disable">Disable sleep detection</string>
    <string name="notification_deep_sleep">Device is not entering Deep Sleep</string>

    <string name="new_feature_title">Deep Sleep Detection</string>
    <string name="new_feature_summary">A new background monitoring service that alerts you when the device does not enter deep sleep.</string>

    <string name="xposed_warning_title">Xposed Detected</string>
    <string name="xposed_warning_content">Unfortunately we are unable to support devices running Xposed. Automatic crash reporting will be disabled.</string>

    <string name="primary_color">Primary Color</string>
    <string name="primary_color_desc">Apply a primary theme color</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_desc">Apply an accent color</string>

    <string name="running_processes">Running Processes</string>
    <string name="btn_full_kernel_version">Full Version</string>
    <string name="btn_processes">Processes</string>
    <string name="btn_logcat">View Logcat</string>

    <string name="contact">Contact</string>
    <string name="email_developer">Email Developer</string>
    <string name="email_developer_summary">Send bug report and feature requests</string>
    <string name="view_gplus">View G+ Profile</string>
    <string name="view_gplus_summary">Open Google Plus profile page</string>
    <string name="donate_summary">Send money to help fund this project</string>

    <string name="logcat_header">Logcat</string>
    <string name="logcat_file_saved">File saved to /sdcard/</string>
    <string name="logcat_error_saving">"Unable to save logcat to sdcard"</string>
    <string name="logcat_input_title">Save file as&#8230;</string>
    <string name="logcat_input_hint">logcat.txt</string>

    <string name="process_name_header">Name:</string>
    <string name="process_policy_header">Policy:</string>
    <string name="process_pid_header">PID:</string>
    <string name="process_uid_header">UID/GID:</string>
    <string name="process_ppid_header">PPID:</string>
    <string name="process_started_header">Started:</string>
    <string name="process_cputime_header">CPU Time:</string>
    <string name="process_nice_header">Nice:</string>
    <string name="process_scheduling_header">Scheduling Priority:</string>
    <string name="process_usermode_header">Time in User Mode:</string>
    <string name="process_kernelmode_header">Time in Kernel Mode:</string>
    <string name="process_size_header">Size:</string>
    <string name="process_rss_header">RSS:</string>

</resources>
