<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/welcome_toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="175dp"
        android:background="@color/primary"
        android:elevation="8dp">

        <RelativeLayout
            android:id="@+id/welcome_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome"
                android:textSize="36sp"
                android:textColor="@android:color/primary_text_dark" />

            <ImageView
                android:id="@+id/welcome_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_large" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/welcome_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_summary"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp" />

    <TextView
        android:id="@+id/welcome_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_features"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingStart="16dp"/>

    <TextView
        android:id="@+id/welcome_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_crashreport"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="24dp" />

    <TextView
        android:id="@+id/welcome_textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welcome_autorefresh"
        android:paddingTop="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="24dp" />

    <TextView
        android:id="@+id/welcome_textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_autoreset"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="24dp" />

    <TextView
        android:id="@+id/welcome_blankspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp" />

    <Button
        android:id="@+id/buttonflat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_button_text"
        android:textColor="@color/accent"
        android:onClick="onClick"
        android:clickable="true"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>