<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ui_charged_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/charged_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_charged"
            android:gravity="top"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_mtrl"
            android:layout_marginRight="@dimen/padding_mtrl"
            android:padding="6dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/charged_view_status"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_charged"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="175dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            card_view:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_mtrl"
                    android:layout_marginLeft="@dimen/padding_mtrl"
                    android:layout_marginRight="@dimen/padding_mtrl"
                    android:text="@string/charged_view_enabled"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/charged_view_message"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/padding_mtrl"
                    android:layout_marginLeft="@dimen/padding_mtrl"
                    android:layout_marginRight="@dimen/padding_mtrl" />

                <Button
                    android:id="@+id/btn_charged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_mtrl"
                    android:layout_marginLeft="@dimen/padding_mtrl"
                    android:layout_marginRight="@dimen/padding_mtrl"
                    android:layout_gravity="right|bottom"
                    android:text="@string/action_disable"
                    android:textColor="@color/primary"
                    style="?android:attr/borderlessButtonStyle"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</merge>