<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ui_main_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/card_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <include layout="@layout/welcome_layout"/>
                <include layout="@layout/feature_layout"/>
                <include layout="@layout/charged_layout"/>
                <include layout="@layout/states_warning_layout"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_time"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    card_view:cardBackgroundColor="?attr/colorCardBackground"
                    card_view:cardCornerRadius="0dp"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <ImageButton
                            android:id="@+id/btn_states_more"
                            android:src="@drawable/ic_menu_more"
                            android:tint="?attr/colorDrawableTint"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginLeft="@dimen/btn_padding_mtrl"
                            android:layout_marginRight="@dimen/btn_padding_mtrl"
                            style="?android:attr/borderlessButtonStyle"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_gravity="center_horizontal|top|end"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true" />

                        <TextView
                            android:id="@+id/ui_header_total_state_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_mtrl"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:text="@string/total_state_time"
                            android:textColor="@color/accent"/>

                        <TextView
                            android:id="@+id/ui_total_state_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/padding_mtrl"
                            android:layout_below="@+id/ui_header_total_state_time"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="36sp"/>

                        <android.support.v7.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/states_toolbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_mtrl"
                            android:layout_marginBottom="@dimen/padding_mtrl"
                            android:layout_marginLeft="@dimen/padding_mtrl"
                            android:layout_marginRight="@dimen/padding_mtrl"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:elevation="4dp"
                            android:visibility="gone"
                            card_view:cardBackgroundColor="?attr/colorFloatingToolbar"
                            card_view:cardCornerRadius="2dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <android.support.v7.widget.AppCompatButton
                                    android:id="@+id/states_hide"
                                    android:layout_width="118dp"
                                    android:layout_height="48dp"
                                    android:text="@string/states_toolbar_hide"
                                    android:textAllCaps="true"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:background="@android:color/transparent"/>

                                <android.support.v7.widget.AppCompatButton
                                    android:id="@+id/states_reset"
                                    android:layout_width="80dp"
                                    android:layout_height="48dp"
                                    android:layout_toEndOf="@+id/states_hide"
                                    android:text="@string/states_toolbar_reset"
                                    android:textAllCaps="true"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:background="@android:color/transparent"/>

                                <android.support.v7.widget.AppCompatButton
                                    android:id="@+id/states_restore"
                                    android:layout_width="96dp"
                                    android:layout_height="48dp"
                                    android:layout_toEndOf="@+id/states_reset"
                                    android:text="@string/states_toolbar_restore"
                                    android:textAllCaps="true"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_states"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    card_view:cardBackgroundColor="?attr/colorCardBackground"
                    card_view:cardCornerRadius="0dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ui_states_view"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_mtrl"
                            android:layout_marginLeft="@dimen/padding_mtrl"
                            android:layout_marginRight="@dimen/padding_mtrl"/>

                        <include layout="@layout/unused_states_layout"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <View
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</FrameLayout>